# SaadhanaTrader

./: .gitignore  CLAUDE.md  HANDOFF_PROMPT.md  README.md
filter/: README.md  pyproject.toml
filter/saadhana_filter/: __init__.py
filter/saadhana_filter/backtest/: __init__.py  metrics.py  replay.py  report.py
filter/saadhana_filter/catalysts/: __init__.py  aggregator.py  classifier.py  daily.py  types.py
filter/saadhana_filter/cohorts/: __init__.py  registry.py
filter/saadhana_filter/data/: __init__.py  loader.py  universe.py
filter/saadhana_filter/indicators/: __init__.py  adaptive_supertrend.py  conditions.py  deviation_trend.py  ma_crossover.py  primitives.py  rpi.py
filter/saadhana_filter/ledger/: __init__.py  migrations.py  schema.sql  writer.py
filter/saadhana_filter/quality/: __init__.py  confirmation_score.py  regime_filter.py  tier2.py
filter/saadhana_filter/scan/: __init__.py  daily.py  research.py  universe.py
filter/saadhana_filter/sectors/: __init__.py  strength.py
filter/saadhana_filter/signals/: __init__.py  engine.py  regime.py  risk.py  sell.py  state.py  tier1.py  triple_confluence.py
filter/tests/: builders.py  conftest.py  test_adaptive_supertrend.py  test_backtest.py  test_cohorts_registry.py  test_conditions.py  test_deviation_trend.py  test_engine.py  test_ledger_schema.py  test_loader.py  test_ma_crossover.py  test_primitives.py  test_pro_setup_score.py  test_regime.py  test_regime_filter.py  test_risk.py  test_rpi.py  test_scan.py  test_sell.py  test_tier1.py  test_tier2.py  test_triple_confluence.py  test_universe.py
(+134 files in other folders)
